2013-10-07 Till Tantau <tantau@users.sourceforge.net>

	- Arrow tips and their doc are now officially finished!
	- Added documentation of nonlinear transformations. 
	
2013-10-06 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- modified release script to allow uploads of unstable TDS
	  zips to http://pgf.sourceforge.net using
	  make -f pgf/scripts/pgf/Makefile.pgf_release upload USER=cfeuersaenger

2013-10-02 Mark Wibrow <vibrovski@users.sourceforge.net>

	- Fixed problem with math parser inserting extraneous
	  spaces when parsing \dimenexpr
	  
2013-09-30 Till Tantau <tantau@users.sourceforge.net>

	- Changed blend mode syntax to standard pgf syntax (since PDF
	  and SVG do not agree on names...).
	- Added scale and slant options for arrow tips.
	- Added more generic arrow tips.
	
2013-09-24 Till Tantau <tantau@users.sourceforge.net>
	
	- First version of comlete arrow documentation finished. Still
	  need to document the arrows.meta library, though.
	- Added "tips" option for drawing arrow tips without drawing
	  paths.
	
2013-09-23 Till Tantau <tantau@users.sourceforge.net>
	
	- Fixed bug #273 "Graph drawing sublayouts fails".
	- Incorporated first partial documentation of the arrow tips
	  into the main documentation.
	- Fixed bug bugs:#272 "SVG parser error after close path" as
	  suggested by Mark Wibrow.
	- Also changed the default syntax for svg path command so that
	  it uses braces instead of quotation marks. (Quotation marks
	  still work, of course.)

2013-09-22 Till Tantau <tantau@users.sourceforge.net>

	- Started working on arrow doc.
	
2013-09-20 Mark Wibrow <vibrovski@users.sourceforge.net>

	- Added macro to convert string of digits to comma separated list.
	
2013-09-18 Till Tantau <tantau@users.sourceforge.net>

	- First version of new arrow tip management done. Up and
	  running! Still needs documentation and the old arrow tip
	  codes should (but need not) be ported.