@@ -22,8 +22,9 @@ presumably, because none was available. Try saying
 \expandafter\endinput
 \fi
 
-This whole section is heavily under construction. It can and will
-change without notice. Do not use.
+\emph{This whole section is heavily under construction. It can and will
+change without notice. It is mainly a proof-of-concept. Use at your
+own risk.}
 
 \includeluadocumentationof{pgf.gd.ogdf.library}
 
