@@ -102,8 +102,11 @@
 %\canlinkccodetrue
 \canlinkccodefalse
 
+\csname setupcanlinkcode\endcsname % set this to \canlinkcodetrue in
+                                % your master file to include C stuff
+
 \ifcanlinkccode
-\usegdlibrary{examples.c.SimpleDemoC,examples.c.SimpleDemoCPlusPlus,ogdf.c.SimpleDemoOGDF}
+\usegdlibrary{pgf_gd_examples_c_SimpleDemoC,pgf_gd_examples_c_SimpleDemoCPlusPlus,pgf_gd_ogdf_c_SimpleDemoOGDF}
 \usegdlibrary{ogdf}
 \fi
 
