@@ -12,12 +12,14 @@
 % pgf version is defined in \pgfversion in file
 % generic/pgf/utilities/pgfrcs.code.tex 
 
+\def\setupcanlinkcode{\canlinkccodetrue}
+
 \input{../pgfmanual-luatex.cfg}
 \input{../../text-en/pgfmanual-en-main-preamble.tex}
 
 \begin{document}
 
-\include{pgfmanual-en-base-transparency}
-\include{pgfmanual-en-tikz-arrows}
+\include{pgfmanual-en-gd-algorithms-in-c}
+\include{pgfmanual-en-gd-ogdf}
 
 \end{document}
