@@ -1,5 +1,7 @@
 2013-10-07 Till Tantau <tantau@users.sourceforge.net>
-
+	
+	- Applied some fixes so that C code for graph drawing works
+	  once more.
 	- Arrow tips and their doc are now officially finished!
 	- Added documentation of nonlinear transformations. 
 	
